--- a/examples/tutorials/1_Calibrating_R0_to_R1.ipynb
+++ b/examples/tutorials/1_Calibrating_R0_to_R1.ipynb
@@ -145,9 +145,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cta",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cta"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
