--- a/examples/tutorials/5_Reading_simtelarray_Files.ipynb
+++ b/examples/tutorials/5_Reading_simtelarray_Files.ipynb
@@ -191,9 +191,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cta",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cta"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
