--- a/examples/tutorials/6_Creating_Generic_HDF5.ipynb
+++ b/examples/tutorials/6_Creating_Generic_HDF5.ipynb
@@ -226,9 +226,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cta",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cta"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -240,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
